# traffic-analysis-platform

./: .gitignore  Makefile  README.md  agent.md
.github/: copilot-instructions.md
.github/workflows/: build-probe-agent.yml  capture-tests.yml  mlops-cd.yml  mlops-ci.yml
common/kafka/: create-topics.sh
common/nebula/: README.md
common/opensearch/: index-templates.json
common/redis/: README.md
deployments/: Dockerfile.prebuilt.overlay
deployments/kubernetes/: deploy.sh  image-digests.lock.json  site-values.template.yaml
deployments/systemd/: traffic-analysis-auto-commit.service  traffic-analysis-auto-commit.timer
doc/: MIGRATION_MAP.md  README.md
doc/01_design/: Codex-Loop-Engineering-设计.md  自动开发Loop引擎设计.md  课题一产品与技术总体设计.md  面向园区网络的全流量采集分析系统-Tab页功能点与表现形式矩阵.md  面向园区网络的全流量采集分析系统-UI前端规范.md  面向园区网络的全流量采集分析系统-UI设计套装.md  面向园区网络的全流量采集分析系统-二级菜单功能点与表现形式矩阵.md  面向园区网络的全流量采集分析系统-左侧菜单信息架构.md
doc/02_acceptance/: README.md
doc/03_review/: generate_review_ledger.mjs  multi_role_review_ledger.csv  multi_role_review_summary.json  专家深评整改清单.md
doc/05_status/: Figma态势大屏复刻稿-2026-06-26.md  UI视觉复刻实现状态-2026-06-26.md  Web前端重开发状态-2026-06-25.md  live-digest-secret-docsync-2026-06-29.md  代码实证状态核对-2026-06-19.md  会话019f63e1开发流程与续作进度-2026-07-18.md  未开发项梳理-2026-06-19.md  项目开发内容全景梳理-2026-06-25.md
doc/06_ops/: Flink热Checkpoint大盘迁移-2026-07-12.md  基础设施实施进度.txt  服务器信息  模型管理Flink消费者热升级-2026-07-18.md
go/control-plane/: .env.example  config.env  docker-compose.yml  go.mod  go.mod.backup  go.sum  grpcurl-test.sh  init.sql
java/flink-jobs/: pom.xml
mlops/: Dockerfile  Dockerfile.trainer-overlay  FIXES_SUMMARY.md  README.md  requirements.txt
mlops/dashboards/: grafana-mlops-dashboard.json
mlops/docs/: BUSINESS_LOGIC.md  CICD.md  K8S_E2E_FLOW.md  MODEL_STORAGE.md
mlops/scripts/: evaluate_blind_package.py  evaluate_model.py  explain_model.py  export_onnx.py  extract_data.py  register_model.py  test_mlops.py  test_workflow.sh  train_model.py
mlops/workflows/: cron-training-workflow.yaml  mlops-configmap.yaml  mlops-workflow-template.yaml  training-workflow.yaml
proto/: .buf.gen.yaml.swp  buf.gen.yaml  buf.yaml
proto/scripts/: .generate.sh.swn  .generate.sh.swo  .generate.sh.swp  generate.sh
rules/: go.md  java.md  proto.md  rust.md  security.md  typescript.md
rust/probe-agent/: .dockerignore  Cargo.toml  README.md  rust-toolchain.toml
rust/probe-agent/.cargo/: config.toml  rustfmt.toml
rust/probe-agent/.github/: copilot-instructions.md
rust/probe-agent/docker/: Dockerfile  Dockerfile.build  build.sh
rust/probe-agent/probe-agent/: Cargo.toml  Dockerfile.aarch64  Dockerfile.x86_64  config.example.yaml
rust/probe-agent/probe-agent/ebpf/: Cargo.toml
rust/probe-agent/probe-agent/ebpf/src/: main.rs
rust/probe-agent/probe-agent/examples/: pcap_archiver_demo.rs
rust/probe-agent/probe-agent/src/: build.rs  config.rs  cpu_affinity.rs  interface_monitor.rs  lib.rs  main.rs  shutdown.rs
rust/probe-agent/probe-agent/src/aggregator/: community_id.rs  eviction.rs  flow_table.rs  flow_table_config.rs  generational_flow_table.rs  hierarchical_timewheel.rs  mod.rs  online_stats.rs  packet_processor.rs  partitioned_flow_table.rs
rust/probe-agent/probe-agent/src/archiver/: buffer.rs  disk_monitor.rs  index.rs  mod.rs  pcap.rs  upload_journal.rs  uploader.rs
rust/probe-agent/probe-agent/src/capture/: af_packet.rs  frame_allocator.rs  mod.rs  packet_batch.rs  pcap_offline.rs  promisc.rs  ring.rs  umem.rs  xdp.rs  xdp_socket.rs  xdp_sys.rs
rust/probe-agent/probe-agent/src/metrics/: mod.rs
rust/probe-agent/probe-agent/src/parser/: arp.rs  dhcp.rs  dns.rs  mod.rs
rust/probe-agent/probe-agent/src/sender/: auth.rs  batch.rs  grpc.rs  mod.rs  pool.rs  retry.rs
rust/probe-agent/probe-agent/tests/: dataset_pcap_replay_test.rs  integration_test.rs  online_capture_test.rs  pcap_offline_test.rs  stress_test.rs
rust/probe-agent/probe-agent/xtask/src/: main.rs
rust/probe-agent/proto-gen/: Cargo.toml  build.rs
rust/probe-agent/proto-gen/src/: lib.rs  traffic.v1.rs  traffic.v1.serde.rs  traffic.v1.tonic.rs
rust/probe-agent/scripts/: build-images.sh  build_all.sh  generate-mtls-certs.sh  mTLS.sh  setup-dev-openeuler.sh  test_flow_table.sh  test_pcap_buffer.sh
rust/probe-agent/tests/reports/: full_test_report.txt  stress_500k_report.txt
rust/probe-agent/tests/scripts/: gen_stress_pcap.py
rust/probe-agent/xtask/: Cargo.toml
rust/probe-agent/xtask/src/: main.rs
scripts/: extract_fusion_ui_icons.go  extract_fusion_ui_icons.mjs  finalize_whitelist_r352_verification.mjs  git_auto_commit.sh  promote_fusion_icon_candidates.mjs  rotate_mlops_api_token.sh  seed_behavior_baseline_acceptance_fixture.sql  seed_data_quality_pagination_fixture.sql  seed_forensics_ui_reference_fixture.sql  seed_mlops_training_acceptance_fixture.sql  seed_mlops_workbench_fixture.sql  seed_model_ui_reference_fixture.sql  seed_notification_acceptance_fixture.sql  seed_probe_ui_reference_fixture.sql  seed_whitelist_acceptance_fixture.sql
scripts/codex_loop/: Dockerfile  README.md  __init__.py  auto_repair_loop.py  codex_adapter.py  codex_runner.py  collect_evidence.py  context_pack.py  daemon.py  deploy.py  design.py  discover.py  evidence_check.py  executor_pool.py  executor_pool_stress.py  guide.py  image_build.py  image_distribution.py  implement.py  k8s_bootstrap.py  learning_episode.py  lib.py  llm_reviewer.py  lock_manager.py  maturity_audit.py  metrics.py  model_profile.py  objective_stop.py  patch_runner.py  plan.py  preflight.py  queue_backend.py  queue_http.py  queue_service.py  queue_sqlite.py  queue_store.py  release.py  remote_pool_k8s_readiness.py  remote_pool_k8s_stress.py  remote_pool_stress.py  (+19 more)
tests/: run_tests.sh
tests/chaos/: README.md  ha_drill_plan.yaml  live_ha_drill_evidence_bootstrap.sh  live_ha_drill_review_packet.sh  live_ha_readiness_preflight.sh
tests/e2e/: asset_inventory_seed_sync_check.mjs  business_ui_constraint_inventory.mjs  deployment_visual_compare_windows_cdp.mjs  fusion_acceptance_seed_sync_check.mjs  fusion_ui_icon_candidate_check.mjs  image_digest_lock.py  (+140 more)
(+3942 files in other folders)
