# probe-agent/Cargo.toml
# Workspace 配置

[workspace]
members = [
    "proto-gen",
    "probe-agent",
    "xtask",
]
# probe-agent/ebpf excluded from default members:
#   requires nightly + bpfel-unknown-none target
#   build with: cargo +nightly build -p probe-agent-ebpf --target bpfel-unknown-none -Z build-std=core
#   or use the Docker build: docker build -f docker/Dockerfile .
exclude = ["probe-agent/ebpf"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Probe Agent Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = { version = "0.12", features = ["tls", "tls-roots", "gzip"] }
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Crypto
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.21"

# Compression
zstd = "0.13"

# S3
rust-s3 = "0.33"

# Data structures
dashmap = "5.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"

# Networking
etherparse = "0.14"

# Memory
memmap2 = "0.9"
byteorder = "1.5"
bytes = "1.5"

# Time
chrono = "0.4"

# Misc
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Local cache
sled = "0.34"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"