# probe-agent/probe-agent/Cargo.toml

[package]
name = "probe-agent"
version.workspace = true
edition.workspace = true
description = "High-performance network traffic capture agent"
publish = false

[lib]
name = "probe_agent"
path = "src/lib.rs"

[[bin]]
name = "probe-agent"
path = "src/main.rs"

[dependencies]
# Internal
proto-gen = { path = "../proto-gen" }
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Metrics
prometheus = { workspace = true }
lazy_static = { workspace = true }

# Crypto
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Compression
zstd = { workspace = true }

# S3
rust-s3 = { workspace = true }

# Data structures
dashmap = { workspace = true }
crossbeam-queue = { workspace = true }
parking_lot = { workspace = true }
ahash = "0.8"

# Networking
etherparse = { workspace = true }
libc = "0.2"

# Memory
memmap2 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# Misc
uuid = { workspace = true }
num_cpus = { workspace = true }
config = { workspace = true }
clap = { workspace = true }

# Local cache
sled = { workspace = true }

# eBPF
aya = "0.12"

# Parallel
rayon = "1.8"
regex = "1.10"
# Once cell for lazy initialization
once_cell = "1.19"
rand = "0.8"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[features]
default = []
xdp = []