# rust/probe-agent/proto-gen/Cargo.toml
[package]
name = "proto-gen"
version.workspace = true
edition.workspace = true
description = "Generated Protobuf types for traffic-analysis-platform"
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# For well-known types serialization
pbjson-types = "0.6"
pbjson = "0.6"

[features]
default = ["serde"]
serde = []

[build-dependencies]
# No build dependencies - code is pre-generated