# rust/probe-agent/probe-agent/ebpf/Cargo.toml
[package]
name = "probe-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = "0.1"

[[bin]]
name = "xdp_redirect"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
panic = "abort"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"